--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="chrome=1,IE=edge" />
-	<meta name="viewport" content="user-scalable=yes, width=440" />
-	<title>leawaa</title>
+	<meta name="viewport" content="user-scalable=yes, width=480" />
+	<title>index</title>
 	<style>
 		body {
 			background-color: #FFFFFF;
@@ -27,8 +27,8 @@
 	
 	<!-- copy these lines to your document: -->
 
-	<div id="leawaa_hype_container" style="position:relative;overflow:hidden;width:480px;height:800px;">
-		<script type="text/javascript" charset="utf-8" src="leawaa.hyperesources/leawaa_hype_generated_script.js?57730"></script>
+	<div id="index_hype_container" style="position:relative;overflow:hidden;width:480px;height:800px;">
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?85283"></script>
 	</div>
 
 	<!-- end copy -->
